# MediaSDK

./: .gitignore
api/mfx_dispatch/windows/: libmfx_vs2015.vcxproj
dec/: .gitignore  CMakeLists.txt  README.md
dec/cmake/: FindIPP.cmake
dec/src/: intel_qsv_decoder_api.cpp
samples/test/: .gitignore  CMakeLists.txt
samples/test/jna/: make_jar.bat
samples/test/jna/test/: IntelQsvDecoderLibrary.java
samples/test/jna_test/: JnaTest.java  jnarun.bat
samples/test/lib/: libmfx_vs2015.lib
samples/test/src/: YuvRgbConvert.cpp  intel_qsv_decoder_api.cpp  intel_qsv_decoder_api.h  intel_video_decoder.cpp  intel_video_decoder.h  main.cpp  simple_decoder.cpp  simple_decoder2.cpp
